--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases.asciidoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases.asciidoc
@@ -17,6 +17,7 @@ This page includes detailed information about the various releases of VIATRA, in
 
 toc::[]
 
+include::releases/viatra-2.2.adoc[leveloffset=+1]
 include::releases/viatra-2.1.adoc[leveloffset=+1]
 include::releases/viatra-2.0.adoc[leveloffset=+1]
 include::releases/viatra-1.7.adoc[leveloffset=+1]
