[553055] Disables query group generation in standalone parser
This change introduces a new module option to disable the query group
generation in both the model inferrer and validator. The option is on by
default for backward compatibility, except for the standalone parsing
scenarios where these inferred groups are not used for any reason.

Change-Id: I57405cf058a222b6491354e993e641d0a171cf7c
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.3.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.3.adoc
@@ -17,6 +17,26 @@ Starting with version 2.3, both the query and transformation runtime works witho
 . The generated pattern matcher code may still depend on Guava if the queries themselves are including `check` or `eval` expressions. For this reason, query projects are still generated with a Guava dependency; but they can be manually removed if unused.
 . The infrastructure used to parse VQL files still requires Guava to function.
 
+=== Code Generator Updates
+
+Starting with this version, it is possible to disable query group generation (and the validation rules related to it) via customizing the language configuration module. The built-in standalone parser modules disables query group generation, but by default this functionality will stay enabled. The simplest way to rely on this updated generator is the following:
+
+[source,xtend]
+----
+val String pattern = '''
+    import "http://www.eclipse.org/emf/2002/Ecore";
+    
+    pattern b(c : EClass) {
+     EClass.name(c, "someName2");
+    }
+'''
+
+val parser = new PatternParserBuilder()
+    .withInjector(new EMFPatternLanguageStandaloneSetup().createStandaloneInjector)
+    .build
+val uri = URI.createFileURI("b.vql")
+val results = parser.parse(pattern, uri)
+----
 
 == Migrating to VIATRA 2.3
 
