[558424] 'eval unwind' in VQL
Change-Id: Ia1b57509a0a3a9c9d51946f667b36256114e20ae
Signed-off-by: Dénes Fintha <denes.fintha@gmail.com>

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/query-language.asciidoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/query-language.asciidoc
@@ -114,6 +114,7 @@ The most basic pattern constraints are type declarations: use EClasses, ERelatio
   *  Attribute expression evaluation: the `eval()` construct lets you compute values by Java (actually https://www.eclipse.org/xtend/[Xbase]) expressions referencing variables of EDataTypes and java values.
      * `qualifiedName == eval(parentName + "." + simpleName);`
      * The Java types of variables are inferred based on the EMF Ecore specification (using the generated Java classes)
+     * `eval unwind (...)` lets you compute values for each member of a Set object
 5. Additional attribute constraints using the check() construct, similarly to eval():
   * `check(aNumberVariable > aStringVariable.length());`
   * Semantically equivalent to `true == eval(aNumberVariable > aStringVariable.length());`
